move testRun to LocaleProviders, add java time dedicated test file